Bug 255204 - After applying different filters in list and maintenance view, filter strings do not match results
Summary: After applying different filters in list and maintenance view, filter strings...
Status: VERIFIED FIXED
Alias: None
Product: KDE PIM Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-25 13:16 UTC by Felix Wolfsteller
Modified: 2011-02-16 08:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-10-25 13:16:22 UTC
0) start e.g. Mail
1) Browse a folder with mails
2) Type to filter (e.g. "A" => ["A-Mail", "A-Test"])
3) Touch folder to go to maintenance view.
4) Type to filter (e.g. "C" => ["CDE"])
5) Touch back-button.
6) The Filter line will show "A", but the list will show "CDE")

This works in the other direction as well. It seems that a separate filter string is stored per view, but only one result set.

Observed in version 4:4.6~20101025.1189387-1maemo1.1188357 .
Comment 1 Tobias Koenig 2010-11-30 12:45:50 UTC
SVN commit 1202299 by tokoe:

Restore the filter line edit and item list state
when returning from the BulkActionScreen

BUG: 255204


 M  +1 -0      kdeclarativemainview.cpp  
 M  +28 -0     kdeclarativemainview_p.cpp  
 M  +1 -0      kdeclarativemainview_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202299