Restore the filter line edit and item list state when returning from the BulkActionScreen

BUG: 255204

svn path=/trunk/KDE/kdepim/mobile/; revision=1202299